src/objects/SBQQ__QuoteLinePricingGuidance__c.object
<CustomObject>
    <description>The accepted pricing guidance on a quote line</description>
    <fields>
        <fullName>SBQQ__Explanation__c</fullName>
        <description>An explanation of this pricing guidance and recommendations for discounts to provide. Sales reps can view this explanation with the pricing guidance in the quote line editor.</description>
        <inlineHelpText>An explanation of this pricing guidance and recommendations for discounts to provide. Sales reps can view this explanation with the pricing guidance in the quote line editor.</inlineHelpText>
        <label>Explanation</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__Floor__c</fullName>
        <description>High discount for exception pricing based on past sales. If a sales rep wants to use this price, they must discount the quote line manually. This discount may require approvals based on your org&apos;s approval settings.</description>
        <inlineHelpText>High discount for exception pricing based on past sales. If a sales rep wants to use this price, they must discount the quote line manually. This discount may require approvals based on your org&apos;s approval settings.</inlineHelpText>
        <label>Floor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__GuidanceUsed__c</fullName>
        <formula>IF(SBQQ__QuoteLine__r.SBQQ__Discount__c == SBQQ__QuoteLine__r.SBQQ__Guidance__c, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A sales rep has accepted the target discount from this pricing guidance in the quote line editor.</inlineHelpText>
        <label>Guidance Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__IsViewed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A sales rep has viewed this pricing guidance in the quote line editor.</description>
        <label>Viewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Norm__c</fullName>
        <description>Middle-range discount based on past sales. If a sales rep wants to use this price, they must discount the quote line manually. This discount may require approvals based on your org&apos;s approval settings.</description>
        <inlineHelpText>Middle-range discount based on past sales. If a sales rep wants to use this price, they must discount the quote line manually. This discount may require approvals based on your org&apos;s approval settings.</inlineHelpText>
        <label>Norm</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLine__c</fullName>
        <description>The quote line related to this pricing guidance.</description>
        <inlineHelpText>The quote line related to this pricing guidance.</inlineHelpText>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Quote Line Pricing Guidance</relationshipLabel>
        <relationshipName>QuoteLinePricingGuidance</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SBQQ__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The quote containing the quote line related to this pricing guidance.</description>
        <inlineHelpText>The quote containing the quote line related to this pricing guidance.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Quote Line Pricing Guidance</relationshipLabel>
        <relationshipName>QuoteLinePricingGuidance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Target__c</fullName>
        <description>Ideal low-range discount based on past sales. If sales reps accept this pricing guidance, Salesforce CPQ applies a discount to reach this price.</description>
        <inlineHelpText>Ideal low-range discount based on past sales. If sales reps accept this pricing guidance, Salesforce CPQ applies a discount to reach this price.</inlineHelpText>
        <label>Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Quote Line Pricing Guidance</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Line Pricing Guidance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>